--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <title>Game</title>
 </head>
 <body>
-<div id="game">
+<div class="center" id="game">
 <div id="character"></div>
 <div id="block"></div>
 </div>
